<resources>
    <string name="app_name">NotebooksCatalog</string>
    <string name="hardware">Hardware</string>
    <string name="screen">Screen</string>
    <string name="device_image">device image</string>
    <string name="model">Model</string>
    <string name="save">Save</string>
    <string name="device_type">Device Type</string>
    <string name="notebook">Notebook</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
</resources>